# LEGO

./: LICENSE
iam/: .dockerignore  .env.example  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
iam/adapters/secondary/auth_strategies/: __init__.py  strategy_registry.py
iam/adapters/secondary/cache/: in_memory_revocation_store.py
iam/adapters/secondary/persistence/audit_schema/: postgres_audit_logger.py
iam/adapters/secondary/persistence/postgres/auth_schema/: postgres_credential_repository.py
iam/adapters/secondary/security/: argon2_password_hasher.py
iam/config/: __init__.py  settings.py
iam/core/: __init__.py
iam/core/domain/entities/: credential.py  session.py
iam/core/domain/events/: __init__.py  session_revoked.py
iam/core/domain/value_objects/: __init__.py  email.py  password_hash.py  token_claim.py
iam/core/ports/: __init__.py
iam/core/ports/driven/: ievent_bus.py  isession_store.py
iam/core/ports/driving/: __init__.py
iam/core/use_cases/: authenticate_user.py  refresh_token.py  revoke_session.py
iam/docs/: known-gaps.md
iam/migrations/audit_schema/: 001_create_audit_logs_table.sql
iam/migrations/auth_schema/: 001_create_credentials_table.sql
iam/migrations/profile_schema/: 001_create_identities_table.sql
iam/secrets/: .gitkeep  jwt_refresh_secret.txt.example
iam/shared/dtos/: __init__.py  refresh_token_dto.py  revoke_session_dto.py  token_response_dto.py
iam/shared/errors/: __init__.py  domain_errors.py
iam/tests/e2e/: test_api_direct.py  test_final.py
iam/tests/integration/: test_dual_schema_transaction.py
iam/vaultguard_iam.egg-info/: PKG-INFO  requires.txt  top_level.txt
(+49 files in other folders)
